# libArcus

./: .clang-format  .gitattributes  .gitignore  .pylintrc  .travis.yml  Arcus.sip  ArcusConfig.cmake.in  CMakeBuilder.py  CMakeLists.txt  CPackConfig.cmake  Dockerfile  GitVersion.yml  Jenkinsfile  README.md  TODO.md  azure-pipelines.yml  conandata.yml  conanfile.py  conanfile.txt  pyproject.toml  pyproject.toml.in  pyproject.toml.jinja  requirements.txt
.github/workflows/: cicd-mingw64.yml  clang-tidy-review.yml  conan-package.yml  export-package.yml  process-pull-request.yml  requirements-conan-package.txt  scorecard.yml
arcus_include/Arcus/: Error.h  MessageTypeStore.h  Socket.h
cmake/: FindSIP.cmake  FindSIP.py  SIPMacros.cmake  StandardProjectSettings.cmake  cpack_config_deb_mingw64.cmake  mingw_toolchain.cmake  sip.cmake
docker/: build-deb-mingw64.sh  build.sh  publish-debs.sh
docs/development/: protobuf.md  zlib.md
examples/: CMakeLists.txt  example.cpp  example.proto  example.py  example_py.sh
include/Arcus/: Error.h  MessageTypeStore.h  Socket.h  SocketListener.h  Types.h
pyarcus_include/pyArcus/: PythonMessage.h
python/: .Socket.py.kate-swp  Arcus.sip  Error.sip  PythonMessage.cpp  PythonMessage.h  PythonMessage.sip  Socket.sip  SocketListener.sip  Types.sip  pyArcus.sip
python/Arcus/: __init__.py
src/: ArcusExport.h  Error.cpp  Error.h  MessageTypeStore.cpp  MessageTypeStore.h  PlatformSocket.cpp  PlatformSocket_p.h  Socket.cpp  Socket.h  SocketListener.cpp  SocketListener.h  Socket_p.h  Types.h  WireMessage.h  WireMessage_p.h  arc_connection.h  arc_message.cpp  arc_message.h  arc_message_types.h  arc_tcpsocket_connection.cpp  arc_tcpsocket_connection.h
test_package/: CMakeLists.txt  conandata.yml  conanfile.py  test.cpp  test.proto  test.py
test_package/include/: test.h
test_package/src/: test.cpp
tests/: CMakeLists.txt  Test.proto  TestMacros.cmake
tests/Python/: TestConnection.py  conftest.py
tests/TestServer/: CMakeLists.txt  TestServer.cpp  TestServer.h  main.cpp
